--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nsq (1.2.0-fw.2) bionic; urgency=low
+
+  * reliable nsqd service restart
+  * added nsq_to_nsq piping service
+
+ -- Kirill Zakharenko <earwin@gmail.com>  Tue, 19 May 2020 13:24:39 +0300
+
 nsq (1.2.0~fw.1) bionic; urgency=low
 
   * amd64 binaries taken from https://github.com/nsqio/nsq/releases/tag/v1.2.0
